tests/tools/import/GTFS/mapping/invalid_timing/gtfs_additional.tools
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2025-03-15 12:26:09.445445 by gtfs2pt.py v1_22_0+0859-a31ddc5a43f
<configuration>
    <merged-csv value="data.csv"/>
    <modes value="bus"/>
    <vtype-output value="vehtypes.xml"/>
    <network value="net.net.xml"/>
</configuration>
-->

<additional xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/additional_file.xsd">
    <busStop id="132189814.0" lane="376468591#0_0" startPos="0.00" endPos="13.00" friendlyPos="true" name="Braunschweig Güldenstraße"/>
    <busStop id="132189814.1" lane="30425275#0_0" startPos="29.12" endPos="42.12" friendlyPos="true" name="Braunschweig Hintern Brüdern"/>
    <busStop id="132189814.2" lane="37983000_0" startPos="28.47" endPos="41.47" friendlyPos="true" name="Braunschweig Packhof"/>
</additional>
